// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error message and style 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      signup
    </title>
  </HelmetWrapper>
  <Styled(Logo) />
  <Styled(P)
    color="error"
  >
    lengthError
    password2.error
  </Styled(P)>
  <Styled(Hr)>
    createAdminAccount
  </Styled(Hr)>
  <styled.form
    action="/api/admin"
    method="post"
  >
    <Input
      focus={false}
      kind="primary"
      name="userName"
      onChange={[Function]}
      placeholder="userName"
      required={true}
      type="text"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="email"
      onChange={[Function]}
      placeholder="email"
      required={true}
      type="email"
      value=""
    />
    <Input
      focus={false}
      kind="error"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value="123"
    />
    <Input
      focus={false}
      kind="error"
      name="password2"
      onChange={[Function]}
      placeholder="password2"
      required={true}
      type="password"
      value="1234"
    />
    <Button
      active={false}
      block={true}
      component="input"
      disabled={false}
      kind="primary"
      round={false}
      size="normal"
      square={false}
      type="submit"
      value="signup"
    />
  </styled.form>
  <LocaleFooter />
</styled.div>
`;

exports[`should renders <Signup> correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      signup
    </title>
  </HelmetWrapper>
  <Styled(Logo) />
  <Styled(P)
    color="error"
  />
  <Styled(Hr)>
    createAdminAccount
  </Styled(Hr)>
  <styled.form
    action="/api/admin"
    method="post"
  >
    <Input
      focus={false}
      kind="primary"
      name="userName"
      onChange={[Function]}
      placeholder="userName"
      required={true}
      type="text"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="email"
      onChange={[Function]}
      placeholder="email"
      required={true}
      type="email"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="password2"
      onChange={[Function]}
      placeholder="password2"
      required={true}
      type="password"
      value=""
    />
    <Button
      active={false}
      block={true}
      component="input"
      disabled={false}
      kind="primary"
      round={false}
      size="normal"
      square={false}
      type="submit"
      value="signup"
    />
  </styled.form>
  <LocaleFooter />
</styled.div>
`;

exports[`should renders <Signup> correctly with errorMessage 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      signup
    </title>
  </HelmetWrapper>
  <Styled(Logo) />
  <Styled(P)
    color="error"
  >
    errorMessage
  </Styled(P)>
  <Styled(Hr)>
    createAdminAccount
  </Styled(Hr)>
  <styled.form
    action="/api/admin"
    method="post"
  >
    <Input
      focus={false}
      kind="primary"
      name="userName"
      onChange={[Function]}
      placeholder="userName"
      required={true}
      type="text"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="email"
      onChange={[Function]}
      placeholder="email"
      required={true}
      type="email"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="password"
      onChange={[Function]}
      placeholder="password"
      required={true}
      type="password"
      value=""
    />
    <Input
      focus={false}
      kind="primary"
      name="password2"
      onChange={[Function]}
      placeholder="password2"
      required={true}
      type="password"
      value=""
    />
    <Button
      active={false}
      block={true}
      component="input"
      disabled={false}
      kind="primary"
      round={false}
      size="normal"
      square={false}
      type="submit"
      value="signup"
    />
  </styled.form>
  <LocaleFooter />
</styled.div>
`;
